# rasberrypi_iot_experiment

./: .cursorindexingignore  .gitignore  CONTRIBUTING.md  LICENSE  README.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  sensors.db
.specstory/history/: 2025-06-01_02-46-github風にディレクトリを整える.md  2025-06-01_14-39-ignore-cursorindexingignore-and-venv.md
sensors/: led_display.py  temp.py
web/: db.py  web.py
web/templates/: index.html
